--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Mystery Fruits is a game by guessing the 3 fruits in its proper order in minimum of 6 attempts" />
     <title>Mystery Fruits</title>
   </head>
   <body>
