--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mystery Fruits</title>
     <meta name="description" content="Mystery Fruits is a game by guessing the 3 fruits in its proper order in minimum of 6 attempts" />
+    <script>
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (localStorage.getItem('color-theme') === 'darkMode' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: darkMode)').matches)) {
+          document.documentElement.classList.add('darkMode');
+      } else {
+          document.documentElement.classList.remove('darkMode')
+      }
+  </script>
   </head>
-  <body>
+  <body >
+    
     <div id="app"></div>
+    
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
