Remove duplicate body tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mystery Fruits</title>
     <meta name="description" content="Mystery Fruits is a game by guessing the 3 fruits in its proper order in minimum of 6 attempts" />
-   
   </head>
-  <body>
-    <body class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-800"></body>
+  <body class="antialiased text-slate-500 dark:text-white bg-white dark:bg-slate-800">
     <div id="app"></div>
-     
     <script type="module" src="/src/main.js"></script>
-    
-  </body >
- 
+  </body>
 </html>
