Add transition when change from light to dark and vice versa

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mystery Fruits</title>
     <meta name="description" content="Mystery Fruits is a game by guessing the 3 fruits in its proper order in minimum of 6 attempts" />
   </head>
-  <body class="antialiased text-slate-500 dark:text-white bg-white dark:bg-slate-800">
+  <body class="antialiased text-slate-500 dark:text-white bg-white dark:bg-slate-800 transition-colors">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
