feat: migrate project to TypeScript and enhance component typings
- Updated Vue components to use TypeScript with `<script setup lang="ts">`.
- Refactored props definitions to utilize TypeScript interfaces and types.
- Introduced new composables for common functionalities and fruit management.
- Replaced JavaScript files with TypeScript equivalents in the router and lib.
- Added TypeScript configuration files (`tsconfig.json` and `tsconfig.node.json`).
- Integrated Vite for build tooling with TypeScript support.
- Removed unused JavaScript files and ensured proper type safety across the application.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body class="antialiased text-slate-500 dark:text-white bg-white dark:bg-slate-800 transition-colors">
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
